--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.7.18",
     "concurrently": "^7.4.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "@types/node": "^18.7.20"
   }
 }
